5.8.2openmpi
	- fixed buffer overflow which occurred if marker or event comment
	  records generated
	- fixed bug in MPI-I/O tracing: tracking MPI file handles even if
	  MPI_File_open isn't recorded
	- fixed bug in vtunify: do only write active streams/process ids to the
	  OTF master control file (*.otf)

5.8.1openmpi
	- updated version of internal OTF to 1.6.5openmpi
	  (see extlib/otf/ChangeLog)
	- added support for tracing functions in shared libraries instrumented
	  by the GNU, Intel, PathScale, or PGI 9 compiler
	- extended support for BlueGene/P in terms of tracing libraries
	  (e.g. libc I/O) and tracing of multi-threaded applications
	- added default option file for CrayXT platforms
	- added support for PAPI-C counters which belong to different components
	- added environment variable VT_METRICS_SEP to specify a string which
	  separate the counter names in VT_METRICS
	- extended usability of environment variable VT_METRICS for PAPI
	  counters to specifiy whether a counter provides increasing or
	  absolute values
	- added support for "re-locate" an existing VampirTrace installation
	  without re-build it from source
	- fixed configure's version detection for PAPI to support version 4.x
	- added configure tests for a few pthread functions which do not exist
	  on some platforms
	- added configure tests to detect Bull MPICH2
	- use Open MPI provided Fortran wrapper library 'libmpi_f77'
	- added functions 'MPI_Group_range_<incl|excl>' to Fortran MPI wrappers
	- use more portable 'nm' command instead of the BFD library to collect
	  symbol information for instrumentation with the GNU, Intel, PathScale,
	  and PGI 9 compiler
	- do not shutdown call stack if maximum number of buffer flushes was
	  reached, because the additional leaves suggest a wrong application
	  flow
	- fixed potential stack underflow in vtfilter which might be cause a
	  segmentation fault
	- fixed detection of unique node id on MacOS platforms
	- fixed support for LAM/MPI